# gpt4v-demo

./: .env.example  README.md  pyproject.toml  quickstart-vision.py  quickstart.py
.devcontainer/: devcontainer.json
docs/: SolutionArchitecture.md  WorkshopGuidance.md
flows/naive-describe-image-flow/: AOAI_vision_request_variant_1.jinja2  flow.dag.yaml  preprocess_image.py
flows/naive-describe-image-flow/.promptflow/: flow.tools.json
