[tool.poetry]
name = "gpt4v-demo"
version = "0.1.0"
description = "Playground for various GPT4with Vision on Azure use cases"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.11.1"
install = "^1.3.5"
promptflow = "^1.4.1"
promptflow-tools = "^1.1.0"
keyrings-alt = "^5.0.0"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
